[package]
name = "rust-simple-todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.6.0"
serde = "1.0.136"
simple_logger = "2.1.0"
log = "0.4.14"
pam = "0.7.0"
env_logger = "0.9.0"